--- a/main.css
+++ b/main.css
@@ -1,19 +1,24 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
-  /* background: black; */
-  background-image: url("flag.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: inline-block;
-  position: absolute;
-  padding-left: 30px;
+  background: black;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 p {
   font-size: 40pt;
   text-transform: uppercase;
   color: chartreuse;
-  padding-top: 4px;
+  padding-bottom:  54px;
   align-content: center;
+  
 }
 
 img {
@@ -29,16 +34,23 @@ img {
     rgba(166, 0, 255, 1) 82%
   );
   color: aliceblue;
-  position: absolute;
-  align-content: center;
-  display: flex;
-  flex-direction: row;
   padding: 45px;
   font-size: 80pt;
   font-style: normal;
   font-weight: 200;
-  text-shadow: 2.5px 2.5px black;
+  text-shadow: 5px 5px black;
   border: 10px solid whitesmoke;
   border-radius: 10px 10px 10px 10px;
+}
+
+.location-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  display: flex;
+  align-items: center;
   justify-content: center;
 }
