--- a/main.css
+++ b/main.css
@@ -5,10 +5,10 @@
 }
 body {
   background: black;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  display: border-box;
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 p {
@@ -17,10 +17,6 @@ p {
   color: chartreuse;
   padding-bottom: 54px;
   align-content: center;
-}
-
-img {
-  margin: 30px;
 }
 
 #clock-container {
@@ -51,4 +47,5 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 20px;
 }
